--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;  
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     background: #080808;
     color: #fff;
@@ -79,7 +83,7 @@ width: 100%;
 }
 
 /*About */
-#About{
+#about{
     padding:80px 0;
     color: #ababab
 }
@@ -204,7 +208,7 @@ sub-title{
 
 /*Projects*/
 #projects{
-    padding: 50pc 0;
+    padding: 50px 0;
 }
 
 .work-list{
@@ -287,3 +291,144 @@ sub-title{
     background: #32CD32;
 
 }
+
+/*Contact*/
+.contact-left{
+    flex-basis: 35%;
+}
+.contact-right{
+    flex-basis: 60%;
+}
+
+.contact-left p{
+    margin-top: 30px;
+}
+
+.contact-left p i{
+    color: #32CD32;
+    margin-right: 15px;
+    font-size: 25px;
+}
+
+.social-icons{
+    margin-top: 30px;
+}
+
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+.social-icons a:hover{
+    color: #32CD32;
+    transform: translateY(-5px);
+} 
+
+.btn.btn2{
+    display: inline-block;
+    background: #32CD32;
+
+}
+
+.contact-right form{
+    width: 100%;    
+}
+
+form input, form textarea
+{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 6px;
+}
+
+form .btn2{
+    padding:14px 60px;
+    font-size: 18px;
+    margin: 20px;
+    cursor: pointer;
+
+}
+
+/*CSS For Small Screens*/
+
+nav .fa-solid{
+    display: none;
+}
+@media only screen and (max-width: 600px){
+    #header{
+        background-image: url('images/background-phone.jpg');
+    }
+
+    .header-text{
+        margin-top: 150%;
+        font-size: 16px;
+    }
+
+    .header-text h1{
+        font-size: 30px;
+    }
+
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+        margin-bottom: 15px;
+    }
+
+    nav ul{
+        background: #32CD32;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+
+    nav ul .fa-solid{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    .sub-title{
+        font-size: 40px;
+    }
+
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+    .about-col-2{
+        font-size: 14px;
+    }
+
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+
+}
+
